syntax = "proto3";

option java_multiple_files = true;
option java_package = "pipeline.orchestrator.grpc.messages";

message Data {
    int64 num = 1;
}

message CompositeMessage {
    SubMessage sub_message = 1;
    Data data = 2;
    int32 value = 3;
}

message SubMessage {
    Data sub_data = 1;
}